Allow different configs for servlet.